Errors in doc
